renovate: upgrade appstudio-utils only once a week
The appstudio-utils image is built on every push to build-definitions.
This creates an infinite loop of Renovate update PRs.

The updates are hardly ever relevant. Update the image once a week.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -20,8 +20,15 @@
   "packageRules": [
     {
       "matchPackageNames": [
+        "quay.io/konflux-ci/appstudio-utils"
+      ],
+      "schedule": [
+        "on monday"
+      ]
+    },
+    {
+      "matchPackageNames": [
         "quay.io/konflux-ci/pull-request-builds",
-        "quay.io/konflux-ci/appstudio-utils",
         "quay.io/konflux-ci/buildah",
         "quay.io/konflux-ci/source-container-build",
         "quay.io/redhat-appstudio/e2e-tests",
