fix(KONFLUX-6028): Stop fetching tags with skopeo inspect
By default, skopeo inspect will try to fetch all of the tags for a
remote repository. This can take a lot of time if there are many
present. Therefore, unless we need tags, we should use one of

* `skopeo inspect --raw`
* `skopeo inspect --no-tags`

as both of these will not try to list all tags.

Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/task/apply-tags/0.1/apply-tags.yaml
+++ b/task/apply-tags/0.1/apply-tags.yaml
@@ -61,7 +61,7 @@ spec:
       script: |
         #!/bin/bash
 
-        ADDITIONAL_TAGS_FROM_IMAGE_LABEL=$(skopeo inspect --format '{{ index .Labels "konflux.additional-tags" }}' docker://$IMAGE)
+        ADDITIONAL_TAGS_FROM_IMAGE_LABEL=$(skopeo inspect --no-tags --format '{{ index .Labels "konflux.additional-tags" }}' "docker://$IMAGE")
 
         if [ -n "${ADDITIONAL_TAGS_FROM_IMAGE_LABEL}" ]; then
           IFS=', ' read -r -a tags_array <<< "$ADDITIONAL_TAGS_FROM_IMAGE_LABEL"
