feat: add fbc-fips-check task
Refers to CVP-4334. This task is used to verify FIPS compliance of
unreleased bundles in an FBC fragment. FBC fragment provides the
target OCP version of the bundle, which enables the task to run
check-payload with version specific embedded config.

Signed-off-by: Yashvardhan Nanavati <yashn@bu.edu>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -55,6 +55,8 @@
 /task/clair-scan                                @konflux-ci/integration-service-maintainers
 /task/clamav-scan                               @konflux-ci/integration-service-maintainers
 /task/deprecated-image-check                    @konflux-ci/integration-service-maintainers
+/task/fbc-fips-check                            @konflux-ci/integration-service-maintainers
+/task/fbc-fips-check-oci-ta                     @konflux-ci/integration-service-maintainers
 /task/fbc-related-image-check                   @konflux-ci/integration-service-maintainers
 /task/fbc-validation                            @konflux-ci/integration-service-maintainers
 /task/inspect-image                             @konflux-ci/integration-service-maintainers
