--- a/renovate.json
+++ b/renovate.json
@@ -86,6 +86,8 @@
         "task/coverity-availability-check-oci-ta/**",
         "task/coverity-availability-check/**",
         "task/deprecated-image-check/**",
+        "task/fbc-fips-check-oci-ta/**",
+        "task/fbc-fips-check/**",
         "task/fbc-related-image-check/**",
         "task/fbc-validation/**",
         "task/fips-operator-bundle-check-oci-ta/**",
