Set SBOM name for rpm-ostree generated images to `registry/repository@digest`of the pushed image.
(added quotes to prevent word splitting, per shellcheck	warning)

JIRA: ISV-5322

Signed-off-by: John Bell <jbell@redhat.com>

--- a/task/rpm-ostree/0.2/rpm-ostree.yaml
+++ b/task/rpm-ostree/0.2/rpm-ostree.yaml
@@ -217,7 +217,7 @@ spec:
     # (need to set the workdir, see https://github.com/anchore/syft/issues/2465)
     workingDir: $(workspaces.source.path)/source
     script: |
-      syft oci-dir:/var/lib/containers/rhtap-final-image --output cyclonedx-json=$(workspaces.source.path)/sbom-cyclonedx.json --source-name "${IMAGE%:*}@$(cat "$(results.IMAGE_DIGEST.path)")"
+      syft oci-dir:/var/lib/containers/rhtap-final-image --output cyclonedx-json="$(workspaces.source.path)/sbom-cyclonedx.json" --source-name "${IMAGE%:*}@$(cat "$(results.IMAGE_DIGEST.path)")"
     volumeMounts:
       - mountPath: /var/lib/containers
         name: varlibcontainers
