CODEOWNERS: EC owns .tekton/tasks/ec-checks.yaml
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -48,6 +48,7 @@
 /task/tkn-bundle                    @konflux-ci/ec
 /task/tkn-bundle-oci-ta             @konflux-ci/ec
 /task/verify-enterprise-contract    @konflux-ci/ec
+/.tekton/tasks/ec-checks.yaml       @konflux-ci/ec
 
 # renovate groupName=integration
 /task/clair-scan                @konflux-ci/integration-service-maintainers
