--- a/renovate.json
+++ b/renovate.json
@@ -70,6 +70,7 @@
     {
       "groupName": "ec",
       "matchFileNames": [
+        ".tekton/tasks/ec-checks.yaml",
         "task/tkn-bundle-oci-ta/**",
         "task/tkn-bundle/**",
         "task/verify-enterprise-contract/**"
