fix(STONEINTG-1074): set the option max file size to 2000M as in doc
Signed-off-by: Kasem Alem <kalem@kalem-thinkpadp16vgen1.raanaii.csb>

--- a/task/clamav-scan/0.2/clamav-scan.yaml
+++ b/task/clamav-scan/0.2/clamav-scan.yaml
@@ -100,7 +100,7 @@ spec:
             db_version=$(clamscan --version | sed 's|.*/\(.*\)/.*|\1|')
 
             echo "Scanning image for arch $arch. This operation may take a while."
-            clamscan $destination -ri --max-scansize=4095M --max-filesize=4095M \
+            clamscan "${destination}" -ri --max-scansize=4095M --max-filesize=2000M \
               --max-scantime=0 --max-files=0 --max-recursion=1000 --max-dir-recursion=20000 --max-embeddedpe=4095M \
               --max-htmlnormalize=10M --max-htmlnotags=4095M --max-scriptnormalize=5M --max-ziptypercg=4095M \
               --max-partitions=50000 --max-iconspe=100000 --max-rechwp3=20000 --pcre-match-limit=100000000 --pcre-recmatch-limit=2000000 \
