CODEOWNERS: EC owns pipelines/enterprise-contract
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -71,6 +71,7 @@
       "groupName": "ec",
       "matchFileNames": [
         ".tekton/tasks/ec-checks.yaml",
+        "pipelines/enterprise-contract.yaml",
         "task/tkn-bundle-oci-ta/**",
         "task/tkn-bundle/**",
         "task/verify-enterprise-contract/**"
