--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -48,6 +48,7 @@
 /task/tkn-bundle                    @konflux-ci/ec
 /task/tkn-bundle-oci-ta             @konflux-ci/ec
 /task/verify-enterprise-contract    @konflux-ci/ec
+/pipelines/enterprise-contract.yaml @konflux-ci/ec
 /.tekton/tasks/ec-checks.yaml       @konflux-ci/ec
 
 # renovate groupName=integration
