chore(KFLUXVNGD-140): renovate to ignore tekton-tools tasks
The tasks that are maintained in tekton-tools are tracked by mintmaker
there and have additional specific test cases there.

We should let mintmaker update them rather than have renovate update
them here. The updated tasks are then automatically mirrored to this
repo.

Signed-off-by: Yftach Herzog <yherzog@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -76,10 +76,8 @@
 # renovate groupName=preflight
 /task/ecosystem-cert-preflight-checks   @acornett21 @bcrochet @komish @skattoju
 
-# renovate groupName=eaas
+# maitained in tekton-tools, thus should be ignored by renovate
 /task/provision-env-with-ephemeral-namespace    @amisstea @avi-biton @gbenhaim @omeramsc @yftacherzog
-
-# renovate groupName=rpm-tasks
 /task/generate-odcs-compose @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/rpms-signature-scan   @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/verify-signed-rpms    @amisstea @avi-biton @gbenhaim @yftacherzog
