--- a/renovate.json
+++ b/renovate.json
@@ -136,8 +136,7 @@
         "stepactions/eaas-get-ephemeral-cluster-credentials/**",
         "stepactions/eaas-get-latest-openshift-version-by-prefix/**",
         "stepactions/eaas-get-supported-ephemeral-cluster-versions/**",
-        "task/eaas-provision-space/**",
-        "task/provision-env-with-ephemeral-namespace/**"
+        "task/eaas-provision-space/**"
       ]
     },
     {
@@ -170,12 +169,15 @@
       ]
     },
     {
-      "groupName": "rpm-tasks",
+      "groupName": "tekton-tools-tasks",
+      "description": "Updated and verified in tekton-tools so should be ignored here",
       "matchFileNames": [
         "task/generate-odcs-compose/**",
         "task/rpms-signature-scan/**",
-        "task/verify-signed-rpms/**"
-      ]
+        "task/verify-signed-rpms/**",
+        "task/provision-env-with-ephemeral-namespace/**"
+      ],
+      "enabled": false
     }
   ],
   "postUpdateOptions": [
