Add buildpack groupName
Signed-off-by: cmoulliard <cmoulliard@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -181,6 +181,12 @@
         "task/provision-env-with-ephemeral-namespace/**"
       ],
       "enabled": false
+    },
+    {
+      "groupName": "buildpack",
+      "matchFileNames": [
+        "task/build-paketo-builder-oci-ta/**"
+      ]
     }
   ],
   "postUpdateOptions": [
