feat(KONFLUX-5670): Define computeResources for expensive tasks
Configure computeResources for every `create-trusted-artifact` step and for one separate step in the `prefetch-dependencies` task. Graphs showing resource usage in the PR.

--- a/task/prefetch-dependencies/0.1/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.1/prefetch-dependencies.yaml
@@ -255,6 +255,13 @@ spec:
         readOnly: true
       - mountPath: /activation-key
         name: activation-key
+    computeResources:
+      limits:
+        cpu: '1'
+        memory: 3Gi
+      requests:
+        cpu: '1'
+        memory: 3Gi
     script: |
       #!/bin/bash
 
