Move this to its own step

--- a/task/buildah-oci-ta/0.2/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.2/buildah-oci-ta.yaml
@@ -523,40 +523,6 @@ spec:
         if [ -f "/tmp/cachi2/output/bom.json" ]; then
           echo "Making copy of sbom-cachi2.json"
           cp /tmp/cachi2/output/bom.json ./sbom-cachi2.json
-
-          # Inject a content sets file for backwards compatibility
-          # This is only possible for images built hermetically with prefetch
-          base_image_name=$(buildah inspect --format '{{ index .ImageAnnotations "org.opencontainers.image.base.name"}}' "$IMAGE" | cut -f1 -d'@')
-          base_image_digest=$(buildah inspect --format '{{ index .ImageAnnotations "org.opencontainers.image.base.digest"}}' "$IMAGE")
-          cat >content-sets.json <<EOF
-          {
-              "metadata": {
-                  "icm_version": 1,
-                  "icm_spec": "https://raw.githubusercontent.com/containerbuildsystem/atomic-reactor/master/atomic_reactor/schemas/content_manifest.json",
-                  "image_layer_index": 0
-              },
-              "from_dnf_hint": true,
-              "content_sets": []
-          }
-
-        EOF
-
-          while IFS='' read -r content_set; do
-            jq --arg content_set "$content_set" '.content_sets += [$content_set]' content-sets.json >content-sets.json.tmp
-            mv content-sets.json.tmp content-sets.json
-          done <<<"$(jq -r '.components[].purl' sbom-cachi2.json | grep -o -P '(?<=repository_id=).*(?=(&|$))' | sort -u)"
-
-          echo "Writing to /root/buildinfo/content_manifests/content-sets.json"
-          buildah copy "$container" content-sets.json /root/buildinfo/content_manifests/
-          buildah config -a "org.opencontainers.image.base.name=${base_image_name}" -a "org.opencontainers.image.base.digest=${base_image_digest}" "$container"
-
-          BUILDAH_ARGS=()
-          if [ "${SQUASH}" == "true" ]; then
-            BUILDAH_ARGS+=("--squash")
-          fi
-
-          buildah commit "${BUILDAH_ARGS[@]}" "$container" "$IMAGE"
-          # End content sets backwards compatibility
         fi
 
         buildah mount $container | tee /shared/container_path
@@ -580,6 +546,25 @@ spec:
         requests:
           cpu: "1"
           memory: 2Gi
+      securityContext:
+        capabilities:
+          add:
+            - SETFCAP
+    - name: icm
+      image: quay.io/rbean/testing:icm-injection-scripts
+      args:
+        - $(params.IMAGE)
+      workingDir: /var/workdir
+      volumeMounts:
+        - mountPath: /var/lib/containers
+          name: varlibcontainers
+      computeResources:
+        limits:
+          cpu: "4"
+          memory: 4Gi
+        requests:
+          cpu: "1"
+          memory: 1Gi
       securityContext:
         capabilities:
           add:
