Squeeze under the size limit

--- a/task/buildah-min/0.2/patch.yaml
+++ b/task/buildah-min/0.2/patch.yaml
@@ -14,45 +14,19 @@
 - op: replace
   path: /spec/steps/0/computeResources/requests/cpu
   value: 100m
-# icm step
+# icm, push, and sbom-syft-generate steps
 - op: replace
-  path: /spec/steps/1/computeResources/limits/memory
+  path: /spec/stepTemplate/computeResources/limits/memory
   value: 2Gi
 - op: replace
-  path: /spec/steps/1/computeResources/requests/memory
+  path: /spec/stepTemplate/computeResources/requests/memory
   value: 512Mi
 - op: replace
-  path: /spec/steps/1/computeResources/limits/cpu
+  path: /spec/stepTemplate/computeResources/limits/cpu
   value: 500m
 - op: replace
-  path: /spec/steps/1/computeResources/requests/cpu
+  path: /spec/stepTemplate/computeResources/requests/cpu
   value: 100m
-# push step
-- op: replace
-  path: /spec/steps/2/computeResources/limits/memory
-  value: 2Gi
-- op: replace
-  path: /spec/steps/2/computeResources/requests/memory
-  value: 512Mi
-- op: replace
-  path: /spec/steps/2/computeResources/limits/cpu
-  value: 500m
-- op: replace
-  path: /spec/steps/2/computeResources/requests/cpu
-  value: 100m
-# sbom-syft-generate step
-- op: replace
-  path: /spec/steps/3/computeResources/limits/memory
-  value: 2Gi
-- op: replace
-  path: /spec/steps/3/computeResources/requests/memory
-  value: 512Mi
-- op: replace
-  path: /spec/steps/3/computeResources/limits/cpu
-  value: 1
-- op: replace
-  path: /spec/steps/3/computeResources/requests/cpu
-  value: 50m
 # analyse-dependencies-java-sbom step
 - op: replace
   path: /spec/steps/4/computeResources/limits/memory
