task-generator/remote: fix image-adjustment
The generator is supposed to add the following code to every bash script
in the buildah task:

    if [ "${IMAGE_APPEND_PLATFORM}" == "true" ]; then
        IMAGE="${IMAGE}-${PLATFORM//[^a-zA-Z0-9]/-}"
        export IMAGE
    fi

Previously, the generator only detected bash scripts if they didn't have
a shebang or started with *exactly these two lines*:

    #!/bin/bash
    set -e

Thus missing infinitely many other ways to declare a bash script.

After this change, the generator will detect any script that has no
shebang or starts with e.g.:

    #!/bin/bash
    #!/usr/bin/bash
    #!/usr/bin/env bash

To minimize the changes, the generator will still inject the code after
any 'set *' lines at the beginning of the script.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.2/buildah-remote-oci-ta.yaml
@@ -827,6 +827,10 @@ spec:
     script: |
       #!/bin/bash
 
+      if [ "${IMAGE_APPEND_PLATFORM}" == "true" ]; then
+        IMAGE="${IMAGE}-${PLATFORM//[^a-zA-Z0-9]/-}"
+        export IMAGE
+      fi
       ca_bundle=/mnt/trusted-ca/ca-bundle.crt
       if [ -f "$ca_bundle" ]; then
         echo "INFO: Using mounted CA bundle: $ca_bundle"
