--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -62,7 +62,7 @@
 /task/fbc-validation                            @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/inspect-image                             @konflux-ci/integration-service-maintainers
 /task/sbom-json-check                           @konflux-ci/integration-service-maintainers
-/task/validate-fbc                              @konflux-ci/integration-service-maintainers
+/task/validate-fbc                              @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/fips-operator-bundle-check                @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /task/fips-operator-bundle-check-oci-ta         @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
 /stepactions/fips-operator-check-step-action    @konflux-ci/integration-service-maintainers @konflux-ci/operator-foundry
