push CI: build bundles after creating repos
The create-repositories-if-missing creates the quay repositories for the
build-bundles task. Run them in the correct order.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -94,6 +94,7 @@ spec:
         runAfter:
           - build-appstudio-utils
           - ec-task-checks
+          - create-repositories-if-missing
         workspaces:
           - name: source
             workspace: workspace
