--- a/task/build-maven-zip-oci-ta/0.1/build-maven-zip-oci-ta.yaml
+++ b/task/build-maven-zip-oci-ta/0.1/build-maven-zip-oci-ta.yaml
@@ -159,7 +159,7 @@ spec:
 
         # Save the SBOM produced by Cachi2 so it can be merged into the final SBOM later
         if [ -f "/var/workdir/cachi2/output/bom.json" ]; then
-          cp -vf "/var/workdir/cachi2/output/bom.json" ./sbom-cyclonedx.json
+          cp -vf "/var/workdir/cachi2/output/bom.json" ./sbom.json
         else
           echo "The SBOM file for fetched artifacts is not found!"
           exit 1
@@ -191,7 +191,13 @@ spec:
           update-ca-trust
         fi
 
-        cosign attach sbom --sbom sbom-cyclonedx.json --type cyclonedx "$IMAGE"
+        if jq -e '.bomFormat == "CycloneDX"' <sbom.json >/dev/null; then
+          sbom_type=cyclonedx
+        else
+          sbom_type=spdx
+        fi
+
+        cosign attach sbom --sbom sbom.json --type "$sbom_type" "$IMAGE"
 
         # Remove tag from IMAGE while allowing registry to contain a port number.
         sbom_repo="${IMAGE%:*}"
