push pipeline: fix wrong runAfter relation (#1871)
The build-bundles task is supposed to run after
create-repositories-if-missing, not the other way around. This is
currently causing a dependency cycle.

The task does still need to run after build-appstudio-utils though.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>
Co-authored-by: Flavius Lacatusu <flacatus@redhat.com>

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -184,7 +184,7 @@ spec:
 
       - name: create-repositories-if-missing
         runAfter:
-          - build-bundles
+          - build-appstudio-utils
         taskSpec:
           steps:
             - name: run-create-bundle-repos
