--- a/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
+++ b/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
@@ -89,6 +89,12 @@ spec:
         - use
         - $(params.SOURCE_ARTIFACT)=/opt/app-root/src
     - name: sealights-nodejs-instrumentation
+      computeResources:
+        limits:
+          cpu: 500m
+        requests:
+          cpu: 100m
+          memory: 256Mi
       image: registry.access.redhat.com/ubi8/nodejs-$(params.nodejs-version):latest
       workingDir: /opt/app-root/src
       securityContext:
