feat: add kustomization files to sealights task to manage future versions

--- a/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
+++ b/task/sealights-nodejs-oci-ta/0.1/sealights-nodejs-oci-ta.yaml
@@ -5,6 +5,10 @@ metadata:
   labels:
     konflux-ci/sealights: "true"
     konflux-ci/sealights-language: "nodejs"
+    app.kubernetes.io/version: "0.1"
+  annotations:
+    tekton.dev/pipelines.minVersion: 0.12.1
+    tekton.dev/tags: konflux
 spec:
   description: >-
     This Tekton task automates the process of configuring your Node.js application with Sealights for quality analytics and testing.
@@ -91,7 +95,7 @@ spec:
     - name: sealights-nodejs-instrumentation
       computeResources:
         limits:
-          cpu: 500m
+          memory: 512Mi
         requests:
           cpu: 100m
           memory: 256Mi
