--- a/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
+++ b/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
@@ -5,6 +5,10 @@ metadata:
   labels:
     konflux-ci/sealights: "true"
     konflux-ci/sealights-language: "go"
+    app.kubernetes.io/version: "0.1"
+  annotations:
+    tekton.dev/pipelines.minVersion: 0.12.1
+    tekton.dev/tags: konflux
 spec:
   description: >-
     This Tekton task automates the process of instrumenting Go code with Sealights for quality analytics and testing.
@@ -91,7 +95,7 @@ spec:
       image: registry.access.redhat.com/ubi8/go-toolset:$(params.go-version)
       computeResources:
         limits:
-          cpu: 500m
+          memory: 512Mi
         requests:
           cpu: 100m
           memory: 256Mi
