--- a/task/sealights-python-oci-ta/0.1/sealights-python-oci-ta.yaml
+++ b/task/sealights-python-oci-ta/0.1/sealights-python-oci-ta.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1beta1
+apiVersion: tekton.dev/v1
 kind: Task
 metadata:
   name: sealights-python-oci-ta
@@ -84,6 +84,7 @@ spec:
       computeResources:
         limits:
           memory: 512Mi
+          cpu: 500m
         requests:
           cpu: 100m
           memory: 256Mi
