paketo/0.2: default to SPDX
Switch the default SBOM format to SPDX.

Bump the version label, add the MIGRATION.md file.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
+++ b/task/build-paketo-builder-oci-ta/0.2/build-paketo-builder-oci-ta.yaml
@@ -7,7 +7,7 @@ metadata:
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: image-build, buildpack, paketo, konflux
   labels:
-    app.kubernetes.io/version: "0.1"
+    app.kubernetes.io/version: "0.2"
     build.appstudio.redhat.com/build_type: pack
 spec:
   description: |-
@@ -59,7 +59,7 @@ spec:
         Select the SBOM format to generate. Valid values: spdx, cyclonedx.
         Note: the SBOM from the prefetch task - if there is one - must be in the same format.
       type: string
-      default: cyclonedx
+      default: spdx
     - name: caTrustConfigMapKey
       description: The name of the key in the ConfigMap that contains the CA bundle
         data.
