Add tenant label to track usage of ephemeral clusters
Signed-off-by: Alex Misstear <amisstea@redhat.com>

--- a/stepactions/eaas-create-ephemeral-cluster-hypershift-aws/0.1/eaas-create-ephemeral-cluster-hypershift-aws.yaml
+++ b/stepactions/eaas-create-ephemeral-cluster-hypershift-aws/0.1/eaas-create-ephemeral-cluster-hypershift-aws.yaml
@@ -59,6 +59,8 @@ spec:
       value: "$(params.timeout)"
     - name: IMAGE_CONTENT_SOURCES
       value: "$(params.imageContentSources)"
+    - name: TENANT
+      value: "$(context.taskRun.namespace)"
   script: |
     #!/bin/bash
     set -eo pipefail
@@ -69,6 +71,8 @@ spec:
     kind: ClusterTemplateInstance
     metadata:
       generateName: cluster-
+      labels:
+        eaas.konflux-ci.dev/tenant: $TENANT
     spec:
       clusterTemplateRef: hypershift-aws-cluster
       parameters: []
