feat(KFLUXDP-108): change go-version task to use by default latest version of ubi go-toolset

--- a/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
+++ b/task/sealights-go-oci-ta/0.1/sealights-go-oci-ta.yaml
@@ -31,10 +31,12 @@ spec:
         the application source code.
       type: string
     - name: go-version
+      default: "latest"
       type: string
       description: >-
         "The Go version to use with the 'ubi8/go-toolset' image, in the format '1.x.y' (e.g., '1.21.3'). The go version should be
-        compatible with tags from the Red Hat catalog: https://catalog.redhat.com/software/containers/ubi8/go-toolset/5ce8713aac3db925c03774d1"
+        compatible with tags from the Red Hat catalog: https://catalog.redhat.com/software/containers/ubi8/go-toolset/5ce8713aac3db925c03774d1".
+        By default will use latest version of the go-toolset image.
     - name: sealights-secret
       type: string
       description: >-
