Fix RPM check conditions in prefetch tasks
Ensure input JSON validation checks the actual output string of the
helper function instead of its exit status.

This prevents incorrect handling when the function writes boolean values
to stdout which is not desired behavior. Instead, assign the output
string to a variable.

Signed-off-by: Michal Šoltis <msoltis@redhat.com>

--- a/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
+++ b/task/prefetch-dependencies-oci-ta/0.1/prefetch-dependencies-oci-ta.yaml
@@ -240,7 +240,7 @@ spec:
                         }
                       }'
             )"
-          elif is_json "$input" && input_json_has_rpm "$input"; then
+          elif is_json "$input" && [[ $(input_json_has_rpm "$input") == true ]]; then
             # The output JSON may need the SSL options updated for the RPM backend
             input="$(
               jq \
@@ -264,7 +264,7 @@ spec:
           if [ "$input" == "rpm" ]; then
             input="$(jq -n '{type: "rpm", include_summary_in_sbom: true}')"
 
-          elif is_json "$input" && input_json_has_rpm "$input"; then
+          elif is_json "$input" && [[ $(input_json_has_rpm "$input") == true ]]; then
             input="$(jq '
                         if type == "array" then
                           map(
