--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -171,7 +171,7 @@ spec:
                       }
                     }'
                   )"
-        elif is_json "$input" && input_json_has_rpm "$input"; then
+        elif is_json "$input" && [[ $(input_json_has_rpm "$input") == true ]]; then
           # The output JSON may need the SSL options updated for the RPM backend
           input="$(jq \
                     --argjson ssl "$ssl_options" '
@@ -195,7 +195,7 @@ spec:
         if [ "$input" == "rpm" ]; then
           input="$(jq -n '{type: "rpm", include_summary_in_sbom: true}')"
 
-        elif is_json "$input" && input_json_has_rpm "$input"; then
+        elif is_json "$input" && [[ $(input_json_has_rpm "$input") == true ]]; then
             input="$(jq '
                       if type == "array" then
                         map(
