chore(KFLUXVNGD-210): add source directory to tkn-bundle
Adding a SOURCE_CODE_DIR to represent the location of the
source code inside the working directory

This way, when the source code is cloned we can address to the exact location.

Signed-off-by: Avi Biton <abiton@redhat.com>

--- a/task/tkn-bundle-oci-ta/0.1/recipe.yaml
+++ b/task/tkn-bundle-oci-ta/0.1/recipe.yaml
@@ -6,4 +6,6 @@ removeWorkspaces:
   - source
 preferStepTemplate: true
 replacements:
-  workspaces.source.path: /var/workdir/source
+  workspaces.source.path: /var/workdir
+regexReplacements:
+  "/workspace(/.*)": /var/workdir$1
