sast-coverity-check: do not mount the whole /opt
... as a volume during the build.  Mount only specific subdirectory (and
a symbolic link) instead in order not to break container builds, such as
`konflux-tempo`, that use /opt for other purposes.

Resolves: https://issues.redhat.com/browse/KFLUXSPRT-1945

--- a/task/sast-coverity-check/0.2/sast-coverity-check.yaml
+++ b/task/sast-coverity-check/0.2/sast-coverity-check.yaml
@@ -350,7 +350,8 @@ spec:
       value: /shared/Containerfile
     - name: ADDITIONAL_VOLUME_MOUNTS
       value: |-
-        /opt:/opt
+        /opt/coverity:/opt/coverity
+        /opt/cov-sa-2024.12:/opt/cov-sa-2024.12
         /shared:/shared
         /shared/license.dat:/opt/coverity/bin/license.dat
         /usr/libexec/csgrep-static:/usr/libexec/csgrep-static
