--- a/task/sast-coverity-check/0.2/patch.yaml
+++ b/task/sast-coverity-check/0.2/patch.yaml
@@ -151,7 +151,8 @@
   value:
     name: ADDITIONAL_VOLUME_MOUNTS
     value: |-
-      /opt:/opt
+      /opt/coverity:/opt/coverity
+      /opt/cov-sa-2024.12:/opt/cov-sa-2024.12
       /shared:/shared
       /shared/license.dat:/opt/coverity/bin/license.dat
       /usr/libexec/csgrep-static:/usr/libexec/csgrep-static
