--- a/task/buildah-min/0.4/buildah-min.yaml
+++ b/task/buildah-min/0.4/buildah-min.yaml
@@ -117,6 +117,10 @@ spec:
     description: Additional key=value labels that should be applied to the image
     name: LABELS
     type: array
+  - default: []
+    description: Additional key=value annotations that should be applied to the image
+    name: ANNOTATIONS
+    type: array
   - default: "false"
     description: Whether to enable privileged mode
     name: PRIVILEGED_NESTED
@@ -207,6 +211,8 @@ spec:
     - $(params.BUILD_ARGS[*])
     - --labels
     - $(params.LABELS[*])
+    - --annotations
+    - $(params.ANNOTATIONS[*])
     computeResources:
       limits:
         memory: 4Gi
@@ -279,6 +285,7 @@ spec:
       fi
 
       LABELS=()
+      ANNOTATIONS=()
       # Split `args` into two sets of arguments.
       while [[ $# -gt 0 ]]; do
           case $1 in
@@ -292,6 +299,10 @@ spec:
               --labels)
                   shift
                   while [[ $# -gt 0 && $1 != --* ]]; do LABELS+=("--label" "$1"); shift; done
+                  ;;
+              --annotations)
+                  shift
+                  while [[ $# -gt 0 && $1 != --* ]]; do ANNOTATIONS+=("--annotation" "$1"); shift; done
                   ;;
               *)
                   echo "unexpected argument: $1" >&2
@@ -462,6 +473,7 @@ spec:
           "${VOLUME_MOUNTS[@]}"
           "${BUILDAH_ARGS[@]}"
           "${LABELS[@]}"
+          "${ANNOTATIONS[@]}"
           --tls-verify="$TLSVERIFY" --no-cache
           --ulimit nofile=4096:4096
           -f "$dockerfile_copy" -t "$IMAGE" .
