--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -29,6 +29,11 @@ spec:
         running 'buildah build'
       type: string
       default: ""
+    - name: ANNOTATIONS
+      description: Additional key=value annotations that should be applied
+        to the image
+      type: array
+      default: []
     - name: BUILDAH_FORMAT
       description: The format for the resulting image's mediaType. Valid values
         are oci (default) or docker.
@@ -261,6 +266,8 @@ spec:
         - $(params.BUILD_ARGS[*])
         - --labels
         - $(params.LABELS[*])
+        - --annotations
+        - $(params.ANNOTATIONS[*])
       workingDir: /var/workdir
       volumeMounts:
         - mountPath: /var/lib/containers
@@ -338,6 +345,7 @@ spec:
         fi
 
         LABELS=()
+        ANNOTATIONS=()
         # Split `args` into two sets of arguments.
         while [[ $# -gt 0 ]]; do
           case $1 in
@@ -355,6 +363,13 @@ spec:
             shift
             while [[ $# -gt 0 && $1 != --* ]]; do
               LABELS+=("--label" "$1")
+              shift
+            done
+            ;;
+          --annotations)
+            shift
+            while [[ $# -gt 0 && $1 != --* ]]; do
+              ANNOTATIONS+=("--annotation" "$1")
               shift
             done
             ;;
@@ -527,6 +542,7 @@ spec:
           "${VOLUME_MOUNTS[@]}"
           "${BUILDAH_ARGS[@]}"
           "${LABELS[@]}"
+          "${ANNOTATIONS[@]}"
           --tls-verify="$TLSVERIFY" --no-cache
           --ulimit nofile=4096:4096
           -f "$dockerfile_copy" -t "$IMAGE" .
