--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -106,6 +106,10 @@ spec:
     description: Additional key=value labels that should be applied to the image
     type: array
     default: []
+  - name: ANNOTATIONS
+    description: Additional key=value annotations that should be applied to the image
+    type: array
+    default: []
   - name: PRIVILEGED_NESTED
     description: Whether to enable privileged mode
     type: string
@@ -208,6 +212,8 @@ spec:
       - $(params.BUILD_ARGS[*])
       - --labels
       - $(params.LABELS[*])
+      - --annotations
+      - $(params.ANNOTATIONS[*])
 
     script: |
       #!/bin/bash
@@ -268,6 +274,7 @@ spec:
       fi
 
       LABELS=()
+      ANNOTATIONS=()
       # Split `args` into two sets of arguments.
       while [[ $# -gt 0 ]]; do
           case $1 in
@@ -281,6 +288,10 @@ spec:
               --labels)
                   shift
                   while [[ $# -gt 0 && $1 != --* ]]; do LABELS+=("--label" "$1"); shift; done
+                  ;;
+              --annotations)
+                  shift
+                  while [[ $# -gt 0 && $1 != --* ]]; do ANNOTATIONS+=("--annotation" "$1"); shift; done
                   ;;
               *)
                   echo "unexpected argument: $1" >&2
@@ -451,6 +462,7 @@ spec:
           "${VOLUME_MOUNTS[@]}"
           "${BUILDAH_ARGS[@]}"
           "${LABELS[@]}"
+          "${ANNOTATIONS[@]}"
           --tls-verify="$TLSVERIFY" --no-cache
           --ulimit nofile=4096:4096
           -f "$dockerfile_copy" -t "$IMAGE" .
