--- a/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
+++ b/task/sast-coverity-check-oci-ta/0.2/sast-coverity-check-oci-ta.yaml
@@ -279,7 +279,7 @@ spec:
         - $(params.SOURCE_ARTIFACT)=/var/workdir/source
         - $(params.CACHI2_ARTIFACT)=/var/workdir/cachi2
     - name: prepare
-      image: quay.io/redhat-services-prod/sast/coverity:202412.3
+      image: quay.io/redhat-services-prod/sast/coverity:202412.5
       workingDir: /var/workdir
       volumeMounts:
         - mountPath: /etc/secrets/cov
@@ -335,8 +335,13 @@ spec:
         [ / = "\$proj_dir" ] && proj_dir=\$(mktemp -d)
 
         # /usr/bin/file needs to be available for cov-build to work in Coverity 2024.12
-        if ! [ -x /usr/bin/file ] && [ -w /usr/bin/ ] && [ -x /opt/cov-sa-2024.12/bin/file ]; then
-          install -vm0755 /opt/cov-sa-2024.12/bin/file /usr/bin/file
+        if ! [ -x /usr/bin/file ]; then
+          if [ -w /usr/bin/ ] && [ -x /opt/cov-sa-2024.12/bin/file ]; then
+            install -vm0755 /opt/cov-sa-2024.12/bin/file /usr/bin/file
+          elif [ -e /opt/cov-sa-2024.12/bin/cov-override-access.so ]; then
+            export LD_PRELOAD="/opt/cov-sa-2024.12/bin/cov-override-access.so"
+            export PATH="\${PATH}:/opt/cov-sa-2024.12/bin"
+          fi
         fi
 
         # always remove Coverity's intermediate directory so that it can be recreated with different ownership
@@ -391,7 +396,7 @@ spec:
           exit $EC
         fi
     - name: build
-      image: quay.io/redhat-services-prod/sast/coverity:202412.3
+      image: quay.io/redhat-services-prod/sast/coverity:202412.5
       args:
         - --build-args
         - $(params.BUILD_ARGS[*])
@@ -734,7 +739,7 @@ spec:
           add:
             - SETFCAP
     - name: postprocess
-      image: quay.io/redhat-services-prod/sast/coverity:202412.3
+      image: quay.io/redhat-services-prod/sast/coverity:202412.5
       workingDir: /var/workdir
       volumeMounts:
         - mountPath: /mnt/trusted-ca
