--- a/task/sast-coverity-check/0.2/patch.yaml
+++ b/task/sast-coverity-check/0.2/patch.yaml
@@ -71,7 +71,7 @@
 - op: replace
   path: /spec/steps/0/image
   # New image shoould be based on quay.io/konflux-ci/buildah-task:latest or have all the tooling that the original image has.
-  value: quay.io/redhat-services-prod/sast/coverity:202412.3
+  value: quay.io/redhat-services-prod/sast/coverity:202412.5
 
 # Change build step resources
 - op: replace
@@ -162,7 +162,7 @@
   path: /spec/steps/0
   value:
     name: prepare
-    image: quay.io/redhat-services-prod/sast/coverity:202412.3
+    image: quay.io/redhat-services-prod/sast/coverity:202412.5
     workingDir: $(workspaces.source.path)
     env:
       - name: COV_ANALYZE_ARGS
@@ -218,8 +218,13 @@
       [ / = "\$proj_dir" ] && proj_dir=\$(mktemp -d)
 
       # /usr/bin/file needs to be available for cov-build to work in Coverity 2024.12
-      if ! [ -x /usr/bin/file ] && [ -w /usr/bin/ ] && [ -x /opt/cov-sa-2024.12/bin/file ]; then
-        install -vm0755 /opt/cov-sa-2024.12/bin/file /usr/bin/file
+      if ! [ -x /usr/bin/file ]; then
+        if [ -w /usr/bin/ ] && [ -x /opt/cov-sa-2024.12/bin/file ]; then
+          install -vm0755 /opt/cov-sa-2024.12/bin/file /usr/bin/file
+        elif [ -e /opt/cov-sa-2024.12/bin/cov-override-access.so ]; then
+          export LD_PRELOAD="/opt/cov-sa-2024.12/bin/cov-override-access.so"
+          export PATH="\${PATH}:/opt/cov-sa-2024.12/bin"
+        fi
       fi
 
       # always remove Coverity's intermediate directory so that it can be recreated with different ownership
@@ -290,7 +295,7 @@
   path: /spec/steps/2
   value:
     name: postprocess
-    image: quay.io/redhat-services-prod/sast/coverity:202412.3
+    image: quay.io/redhat-services-prod/sast/coverity:202412.5
     computeResources:
       limits:
         memory: 4Gi
