use buildah image tag current latest

--- a/task/build-vm-image/0.1/build-vm-image.yaml
+++ b/task/build-vm-image/0.1/build-vm-image.yaml
@@ -219,7 +219,7 @@ spec:
           -v /var/lib/containers/storage:/var/lib/containers/storage \
           -v $BUILD_DIR/scripts/script-push.sh:/script-push.sh \
           -v $BUILD_DIR/tekton-results:/tekton-results \
-          registry.access.redhat.com/ubi9/buildah:latest \
+          registry.access.redhat.com/ubi9/buildah:9.5-1739778322 \
           /script-push.sh
 
         REMOTESSHEOF
